# odoo-data-flow

./: .cookiecutter.json  .coverage  .gitignore  .idea  .idea-export-fix  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRUSH.md  Project Constitution_ odoo-data-flow Next-Generation v3.md  README.md  agents.md  debug_context.py  diagnose_connection.py  local_e2e_setup.sh  noxfile.py  pydoclint-baseLine.txt  pyproject.toml  run_e2e_tests.sh  setup.py
.github/workflows/: constraints.txt  e2e.yml  release.yml  tests.yml
docs/: ROADMAP.md  comparison_with_other_tools.md  conf.py  core_concepts.md  faq.md  index.md  installation.md  quickstart.md  reference.md  requirements.txt  usage.md
docs/guides/: advanced_usage.md  configuration.md  data_transformations.md  exporting_data.md  exporting_data_for_modules.md  field_mapping_workflow.md  file_based_migration_workflow.md  importing_data.md  index.md  odoo_workflows.md  performance_tuning.md  post_import_workflows.md  server_to_server_migration.md
modules/: AGENTS.MD
modules/odf_core/: __manifest__.py
modules/odf_core/data/: scheduled_actions.xml
modules/odf_core/models/: __init__.py  odf_connection.py  odf_flow_project.py
modules/odf_core/security/: ir.model.access.csv
modules/odf_core/views/: menus.xml  odf_connection_views.xml  odf_flow_project_views.xml
modules/odf_data_quality_dashboard/: __init__.py  __manifest__.py
modules/odf_data_quality_dashboard/data/: ir_cron_data.xml  res_users.xml  scheduled_actions.xml
modules/odf_data_quality_dashboard/models/: __init__.py  data_quality_issue.py  odf_data_quality_issue.py
modules/odf_data_quality_dashboard/readme/: CONFIGURE.md  CONTEXT.md  DESCRIPTION.md  INSTALL.md  USAGE.md
modules/odf_data_quality_dashboard/security/: ir.model.access.csv  security.xml
modules/odf_data_quality_dashboard/views/: data_quality_issue_views.xml  menus.xml  odf_data_quality_issue_views.xml
odf_data_quality_dashboard/: __manifest__.py
odf_data_quality_dashboard/data/: scheduled_actions.xml
odf_data_quality_dashboard/models/: __init__.py  data_quality_issue.py
odf_data_quality_dashboard/security/: ir.model.access.csv
odoo_csv_tools/lib/: __init__.py  mapper.py  transform.py  xml_transform.py
odoo_csv_tools/lib/internal/: io.py  tools.py
src/odoo_data_flow/: __init__.py  __main__.py  converter.py  enums.py  export_threaded.py  exporter.py  import_threaded.py  importer.py  logging_config.py  migrator.py  workflow_runner.py  write_threaded.py  writer.py
src/odoo_data_flow/lib/: __init__.py  cache.py  checker.py  conf_lib.py  mapper.py  odoo_lib.py  preflight.py  relational_import.py  sort.py  transform.py  writer.py
src/odoo_data_flow/lib/actions/: __init__.py  language_installer.py  module_manager.py
src/odoo_data_flow/lib/internal/: __init__.py  exceptions.py  io.py  rpc_thread.py  tools.py  ui.py
src/odoo_data_flow/lib/workflow/: __init__.py  invoice_v9.py  module_installer.py
tests/: __init__.py  clean.sh  test_actions_module_manager.py  test_cache.py  test_checker.py  test_conf_lib.py  test_converter.py  test_export_threaded.py  test_exporter.py  test_failure_handling.py  test_from_file.py  test_import.py  test_import_threaded.py  test_importer.py  test_importer_deferred.py  test_io.py  test_language_installer.py  test_logging.py  test_m2m_missing_relation_info.py  test_main.py  test_mapper.py  test_merge.py  test_migrator.py  test_odoo_lib.py  test_preflight.py  test_product_v10.py  test_product_v9.py  test_relational_import.py  test_rpc_thread.py  test_sort.py  test_split.py  test_tools.py  test_transform.py  test_ui.py  test_workflow_module_installer.py  test_workflow_runner.py  test_write_threaded.py  test_writer.py  test_xml_file.py
tests/conf/: connection.conf
tests/e2e/: seed_database.py  verify_data.py
tests/origin/: test_merge1.csv  test_merge2.csv
